--- a/nifskope.vcproj
+++ b/nifskope.vcproj
@@ -50,7 +50,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Qt3Support4.lib QtAssistantClient.lib QtCore4.lib QtDesigner4.lib QtDesignerComponents4.lib QtGui4.lib qtmain.lib QtNetwork4.lib QtOpenGL4.lib QtSql4.lib QtSvg4.lib QtTest4.lib QtUiTools.lib QtXml4.lib"
+				AdditionalDependencies="opengl32.lib glu32.lib glaux.lib Qt3Support4.lib QtAssistantClient.lib QtCore4.lib QtDesigner4.lib QtDesignerComponents4.lib QtGui4.lib qtmain.lib QtNetwork4.lib QtOpenGL4.lib QtSql4.lib QtSvg4.lib QtTest4.lib QtUiTools.lib QtXml4.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -101,7 +101,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -114,7 +114,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Qt3Support4.lib QtAssistantClient.lib QtCore4.lib QtDesigner4.lib QtDesignerComponents4.lib QtGui4.lib qtmain.lib QtNetwork4.lib QtOpenGL4.lib QtSql4.lib QtSvg4.lib QtTest4.lib QtUiTools.lib QtXml4.lib"
+				AdditionalDependencies="opengl32.lib glu32.lib glaux.lib Qt3Support4.lib QtAssistantClient.lib QtCore4.lib QtDesigner4.lib QtDesignerComponents4.lib QtGui4.lib qtmain.lib QtNetwork4.lib QtOpenGL4.lib QtSql4.lib QtSvg4.lib QtTest4.lib QtUiTools.lib QtXml4.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
