linux rpm: * added xml files * search for them in datadir folder * search also for the reference docs in the datadir folder * minor fixes

--- a/linux-install/nifskope.desktop
+++ b/linux-install/nifskope.desktop
@@ -5,6 +5,6 @@ Exec=nifskope
 Icon=nifskope.png
 Terminal=false
 Type=Application
-Categories=Application;Graphics;
+Categories=Graphics
 Encoding=UTF-8
 
