--- a/config.h.in
+++ b/config.h.in
@@ -1,3 +1,6 @@
+// NOTE: Run this file through TortoiseSVN's SubWCRev.exe utility
+// (see win-install\makeexe.bat)
+
 /***** BEGIN LICENSE BLOCK *****
 
 BSD License
@@ -44,6 +47,9 @@ const QStringList NIFSKOPE_OLDERVERSIONS = (QStringList() << "NifSkope-1.0.12" <
 
 // a string describing the version of nifskope
 #define NIFSKOPE_VERSION "1.0.13"
+
+// the revision number is generated with TortoiseSVN's SubWCRev.exe
+#define NIFSKOPE_REVISION "$WCREV$"
 
 // create a QSettings variable for nifskope
 #define NIFSKOPE_QSETTINGS(config) QSettings config( "NifTools", "NifSkope-"NIFSKOPE_VERSION )
