--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,5 @@
 // NOTE: Run this file through TortoiseSVN's SubWCRev.exe utility
-// (see win-install\makeexe.bat)
+// (see makeconfig.bat)
 
 /***** BEGIN LICENSE BLOCK *****
 
