--- a/config.h.in
+++ b/config.h.in
@@ -40,18 +40,25 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #include <QStringList>
 
-// QSettings keys for older versions of nifskope
-// add versions to this list (most recent first) whenever incrementing
-// NIFSKOPE_VERSION
+/*! \file config.h
+ * \brief Configuration info
+ *
+ * Include this if you want to access the current version or persistent QSettings.
+ */
+
+//! QSettings keys for older versions of nifskope
+/*!
+ * Add versions to this list (most recent first) whenever incrementing NIFSKOPE_VERSION
+ */
 const QStringList NIFSKOPE_OLDERVERSIONS = (QStringList() <<  "NifSkope-1.0.19" << "NifSkope-1.0.18" << "NifSkope-1.0.17" << "NifSkope-1.0.16" << "NifSkope-1.0.15" << "NifSkope-1.0.14" << "NifSkope-1.0.13" << "NifSkope-1.0.12" << "NifSkope-1.0.11" << "NifSkope-1.0.10" << "NifSkope-1.0.9" << "NifSkope-1.0.8" << "NifSkope-1.0.7" << "NifSkope-1.0.6" << "NifSkope-1.0.5" << "NifSkope");
 
-// a string describing the version of nifskope
+//! A string describing the version of nifskope
 #define NIFSKOPE_VERSION "1.0.20"
 
-// the revision number is generated with TortoiseSVN's SubWCRev.exe
+//! The repository revision number; generated with TortoiseSVN's SubWCRev.exe
 #define NIFSKOPE_REVISION "$WCREV$"
 
-// create a QSettings variable for nifskope
+//! Create or use a QSettings variable for nifskope
 #define NIFSKOPE_QSETTINGS(config) QSettings config( "NifTools", "NifSkope-"NIFSKOPE_VERSION )
 
 #endif
