--- a/config.h.in
+++ b/config.h.in
@@ -50,10 +50,27 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 /*!
  * Add versions to this list (most recent first) whenever incrementing NIFSKOPE_VERSION
  */
-const QStringList NIFSKOPE_OLDERVERSIONS = (QStringList() <<  "NifSkope-1.0.19" << "NifSkope-1.0.18" << "NifSkope-1.0.17" << "NifSkope-1.0.16" << "NifSkope-1.0.15" << "NifSkope-1.0.14" << "NifSkope-1.0.13" << "NifSkope-1.0.12" << "NifSkope-1.0.11" << "NifSkope-1.0.10" << "NifSkope-1.0.9" << "NifSkope-1.0.8" << "NifSkope-1.0.7" << "NifSkope-1.0.6" << "NifSkope-1.0.5" << "NifSkope");
+const QStringList NIFSKOPE_OLDERVERSIONS = (QStringList()
+		<< "NifSkope-1.0.20"
+		<< "NifSkope-1.0.19"
+		<< "NifSkope-1.0.18"
+		<< "NifSkope-1.0.17"
+		<< "NifSkope-1.0.16"
+		<< "NifSkope-1.0.15"
+		<< "NifSkope-1.0.14"
+		<< "NifSkope-1.0.13"
+		<< "NifSkope-1.0.12"
+		<< "NifSkope-1.0.11"
+		<< "NifSkope-1.0.10"
+		<< "NifSkope-1.0.9"
+		<< "NifSkope-1.0.8"
+		<< "NifSkope-1.0.7"
+		<< "NifSkope-1.0.6"
+		<< "NifSkope-1.0.5"
+		<< "NifSkope");
 
 //! A string describing the version of nifskope
-#define NIFSKOPE_VERSION "1.0.20"
+#define NIFSKOPE_VERSION "1.0.21"
 
 //! The repository revision number; generated with TortoiseSVN's SubWCRev.exe
 #define NIFSKOPE_REVISION "$WCREV$"
