--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docsys"]
 	path = docsys
-	url = git://github.com/amorilia/nifdocsys.git
+	url = git://niftools.git.sourceforge.net/gitroot/niftools/nifdocsys
