Added qhull as external module.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docsys"]
 	path = docsys
 	url = git://niftools.git.sourceforge.net/gitroot/niftools/nifdocsys
+[submodule "qhull"]
+	path = qhull
+	url = git://gitorious.org/qhull/qhull.git
