Store version in a file, so we don't need to go and duplicate it everywhere (using follows http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm for formatting).

--- a/config.h.in
+++ b/config.h.in
@@ -71,7 +71,7 @@ const QStringList NIFSKOPE_OLDERVERSIONS = (QStringList()
 		<< "NifSkope");
 
 //! A string describing the version of nifskope
-#define NIFSKOPE_VERSION "1.1.1"
+#define NIFSKOPE_VERSION "$VERSION$"
 
 //! The repository revision number; generated with TortoiseSVN's SubWCRev.exe
 #define NIFSKOPE_REVISION "$WCREV$"
