--- a/README.txt.in
+++ b/README.txt.in
@@ -9,6 +9,8 @@ This is version @VERSION@ of NifSkope.
 Known Issues and Workarounds
 ----------------------------
 
+* Do not install nifskope whilst blender is running.
+
 * On some graphic cards textures show up black or distorted. If this happens,
   uncheck "Shaders" in NifSkope's settings.
 
