--- a/README.txt.in
+++ b/README.txt.in
@@ -11,6 +11,9 @@ Known Issues and Workarounds
 
 * Do not install nifskope whilst blender is running.
 
+* Be warned that collada export is still very experimental. It may, or
+  may not, work for you.
+
 * On some graphic cards textures show up black or distorted. If this happens,
   uncheck "Shaders" in NifSkope's settings.
 
