--- a/linux-install/nifskope.spec.in
+++ b/linux-install/nifskope.spec.in
@@ -81,6 +81,11 @@ rm -rf $RPM_BUILD_ROOT
 %{!?_without_freedesktop:%{_datadir}/applications/%{desktop_vendor}-nifskope.desktop}
 
 %changelog
+* Sat Nov 17 2012 amorilia - 1.1.3-1
+- Fix accidently broken xml for Fallout 3 (contributed by ttl269).
+- Qmake getting git hash no longer relies on git executable.
+- Code refactor: xml for ui of about form.
+- Fix for registry entry proliferation (niftools issue #3584193, reported by neomonkeus).
 * Sun Oct 28 2012 amorilia - 1.1.2-1
 - When combining material properties, keep original material names as much as possible (reported by koniption).
 - Fix display of transformed havok shapes (reported by koniption).
