[Restructure] New .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-# generated ones
+# Generated
+.moc/
+.obj/
+.qrc/
+.ui/
+[Dd]ebug/
+[Rr]elease/
+GeneratedFiles/
 Makefile
 Makefile.Debug
 Makefile.Release
@@ -6,22 +13,50 @@ moc_*.cpp
 qrc_*.cpp
 ui_*.h
 
-# compiled 
+# Intermediate 
 *.o
+*.obj
+*.bak
+*.ilk
+*.log
+*.tmp
 
-# eclipse project
+# Eclipse project
 .project
 .cproject
 .settings
 
-# qtcreator
+# Qt Creator
 NifSkope.pro.user
 
-# binary
+# Binaries
 NifSkope
+NifSkope.exe
 
-# VC build dirs
-release
-debug
-# VC debug file
+# VC Project
+*.cd
+*.filters
+*.sln
+*.sln.docstates
+*.suo
+*.vcxproj
+*.vcxproj.user
+*.vcproj
+*.vcproj.user
+*.vspscc
+*.vssscc
+
+# VC Cache
+ipch/
+*.aps
+*.cachefile
+*.ncb
+*.opensdf
+*.sdf
+
+# VC Debug
 vc100.pdb
+
+# OS
+[Tt]humbs.db
+*.DS_Store
