[Build] Update qhull submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/niftools/nifdocsys.git
 [submodule "qhull"]
 	path = lib/qhull
-	url = git://gitorious.org/qhull/qhull.git
+	url = git@github.com:qhull/qhull.git
