[Git] .gitignore for VS2015

--- a/.gitignore
+++ b/.gitignore
@@ -50,15 +50,20 @@ NifSkope.exe
 *.vsp
 *.vspscc
 *.vssscc
+*.vspx
 
 
 # VC Cache
+.vs/
 ipch/
 *.aps
 *.cachefile
 *.ncb
+*.opendb
 *.opensdf
 *.sdf
+*.VC.db
+*.VC.VC.opendb
 
 # VC Debug
 vc100.pdb
