--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,37 @@
 dist: trusty
-osx_image: xcode8.2
+osx_image: xcode7.2
 sudo: required
 language: cpp
-
+os:
+  - linux
+#  - osx
 addons:
   apt:
     sources:
       - sourceline: 'ppa:beineri/opt-qt551-trusty'
-      - ubuntu-toolchain-r-test
     packages: [
       # static analysis
       clang-3.6,
       # qt5 requirement
-      #qt5-qmake, qt5-default, qtbase5-dev
-      qt-latest
+      qt55-meta-minimal
     ]
-    
-
 matrix:
   fast_finish: true
   include:
     - os: linux
-      python: 3.3
-    - os: linux
-      python: 3.4
-    - os: linux
-      python: 3.5
-    - os: linux
-      python: 3.6
-    - os: linux
-      python: nightly
-    - os: osx
-      python: nightly
+      env:
+        ANALYZE="scan-build-3.6 --use-cc clang-3.6 --use-c++ clang++-3.6 "
+      compiler: clang
+  allow_failures:
+    - env: ANALYZE="scan-build-3.6 --use-cc clang-3.6 --use-c++ clang++-3.6 "
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then QT_ENV_SCRIPT=$(find /opt -name 'qt*-env.sh'); source $QT_ENV_SCRIPT; fi
-#  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt purge qt4-qmake libqt4-dev; fi
 
 script:
   - qmake --version
   - qmake -makefile NifSkope.pro
-  - make -j4
+  - ${ANALYZE}make -j4
 
 notifications:
     email: false
