--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 dist: trusty
-osx_image: xcode7.2
 sudo: required
 language: cpp
 os:
   - linux
-#  - osx
+  - osx
 addons:
   apt:
     sources:
@@ -27,6 +26,7 @@ matrix:
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then QT_ENV_SCRIPT=$(find /opt -name 'qt*-env.sh'); source $QT_ENV_SCRIPT; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew install qt@5.5; export PATH="/usr/local/opt/qt@5.5/bin:$PATH"; fi
 
 script:
   - qmake --version
