--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "docsys"]
 	path = build/docsys
-	url = git://github.com/niftools/nifdocsys.git
+	url = https://github.com/niftools/nifdocsys.git
 [submodule "qhull"]
 	path = lib/qhull
-	url = git@github.com:qhull/qhull.git
+	url = https://github.com/qhull/qhull.git
 [submodule "lib/zlib"]
 	path = lib/zlib
-	url = git@github.com:madler/zlib.git
+	url = https://github.com/madler/zlib.git
