--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ os:
 addons:
   apt:
     sources:
-      - sourceline: 'ppa:beineri/opt-qt551-trusty'
+      - sourceline: 'ppa:beineri/opt-qt57-trusty'
     packages: [
       # static analysis
       clang-3.6,
       # qt5 requirement
-      qt55-meta-minimal
+      qt57-meta-minimal
     ]
 matrix:
   fast_finish: true
@@ -26,7 +26,7 @@ matrix:
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then QT_ENV_SCRIPT=$(find /opt -name 'qt*-env.sh'); source $QT_ENV_SCRIPT; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew install qt@5.5; export PATH="/usr/local/opt/qt@5.5/bin:$PATH"; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew update; brew install qt@5.7; export PATH="/usr/local/opt/qt@5.7/bin:$PATH"; fi
 
 script:
   - qmake --version
