[Build] Fix Travis ppa for 5.7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
 addons:
   apt:
     sources:
-      - sourceline: 'ppa:beineri/opt-qt57-trusty'
+      - sourceline: 'ppa:beineri/opt-qt571-trusty'
     packages: [
       # static analysis
       clang-3.6,
